--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "@medusajs/admin-sdk": "2.1.3",
     "@medusajs/cli": "2.1.3",
     "@medusajs/framework": "2.1.3",
-    "@medusajs/medusa": "2.1.3",
+    "@medusajs/medusa": "^2.1.3",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/knex": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
     "@mikro-orm/postgresql": "5.9.7",
     "awilix": "^8.0.1",
     "axios": "^1.7.9",
-    "medusa-payment-phonepe": "^1.1.46-next-v6",
+    "medusa-payment-manual": "^1.0.25",
     "pg": "^8.13.0",
     "react-beautiful-dnd": "^13.1.1"
   },
