--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.7.9",
     "medusa-payment-manual": "^1.0.25",
     "pg": "^8.13.0",
+    "razorpay": "^2.9.5",
     "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
