--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@medusajs/admin-sdk": "2.1.3",
     "@medusajs/cli": "2.1.3",
-    "@medusajs/framework": "2.1.3",
+    "@medusajs/framework": "^2.1.3",
     "@medusajs/medusa": "^2.1.3",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/knex": "5.9.7",
@@ -47,7 +47,7 @@
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.17.12",
     "@types/react": "^18.3.2",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.25",
