--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mikro-orm/postgresql": "5.9.7",
     "awilix": "^8.0.1",
     "axios": "^1.7.9",
+    "medusa-core-utils": "^1.2.3",
     "medusa-payment-manual": "^1.0.25",
     "pg": "^8.13.0",
     "razorpay": "^2.9.5",
